kubernetes/Cluster-Int-Temp/deployments/monitoring/prometheus/service.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: prometheus
    namespace: monitoring
spec:
    selector:
        app: prometheus
    ports:
        - port: ENC[AES256_GCM,data:jUuQ5g==,iv:fzHoaeVeWZjNWMh2304kg0NGhSxYEjV8MdOYmj6YcCo=,tag:wWkTNPv1i01GvmSYL7abEA==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvTlloZXNaZzJNL2xQMW5S
[...]
            QmVam4HG6+y0hG5C8COJBGCbt4Uhob50Yy9tOosI7qNX6uoF2k6bgA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T13:42:56Z"
    mac: ENC[AES256_GCM,data:+wDFEVHBiO/Lb+TSEa0G/8HRcGv3ZccE71b0NWbge88nCqVJYLgM10SRo+XMI9ki4Yegx3sUoQ4QNHx0k26dyr0wk3JBIUeuY98d6+Hw7kcP+hvODXKv26cF/7IEcXM9xuyDKJmZrg6BoPWPsD4xrYeiCFLDg4ok0B7YkBL9WEs=,iv:HqQQzE3ReIQkG5WfzT+b5zmTC3iJqrVsZXTOyQ2E9ys=,tag:xRhF7HeBc0B2CsHpcG+uwg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
