kubernetes/Cluster-Int-Temp/deployments/monitoring/prometheus/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: prometheus
    namespace: monitoring
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:xS4MB6CLz5/mENwRxpVF/i7u8cisky3d26Z/0NL1,iv:G/MrVHVRsFFaLdPLu+2nZuEwA8qkndLSZnnUmfX4nhg=,tag:/gS5EtBf6RzGwNixWPcEKA==,type:str]
          services:
            - kind: ENC[AES256_GCM,data:vZUGqM7PUA==,iv:peQ133HYwMnBXFNcxJj2s87mUknCqmnSIfnaF0o0vho=,tag:KVCih4nd09Q00fXsJ6zVJA==,type:str]
              name: ENC[AES256_GCM,data:j7RZ8fc0UiilZQ==,iv:84r2Q5dPO55y7hA/M43x5RWv6j4dZBAeC5sgg9a+vD4=,tag:S6EzslpvOe6FOSl7NpPWmQ==,type:str]
              namespace: ENC[AES256_GCM,data:+0nNMoKtKXh1uA==,iv:E9yYGSk4HZ8xZ/ZdvEWl3RX7pfEZAZCdgZVDfBqJLjk=,tag:WR1HXoDum190vgOqveAU+Q==,type:str]
              port: ENC[AES256_GCM,data:Ugi20g==,iv:FtjyiggiK0RLm7t44Q+8Z7LjxcQ8p29zSxSS7WqWq4g=,tag:IesBPZl8ltzJy858IIv6WQ==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:b9KyG0RF1BM0QwVAeQk=,iv:C+s+vtiBIXNQWnwniyotk508UJ/hG8fR2SgStY+2BBY=,tag:ZZFPR1hyh1oOgO92tVh7RQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRNUliLzYrZXYvQ3N6V1R3
[...]
            FcJtn5BhcCulGrbVlpVFjTyaJ0LZ5oKnnZBw2YPgq3qlf2mrSlgxeA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T13:43:50Z"
    mac: ENC[AES256_GCM,data:oAmFIhaOGtaX8poUOZ4cAhtCJ0V0AipG8LKpWIbHCrmfVQ2+EMaUVpI06ZQbxUrdQ3Y+DEVTQlwTQZ0qwBvzJv+FDcunwDqm8JE0wCYu+XIuy8Wj22WNyBd4uP2i6uReHFnR/zoF1cCWz0jofTk4gtKMEFgptLWUs9COF67sdrg=,iv:fcGoDKlMAdY3gZoslh9v0aqtF8B5anx47f9NSq+IKI0=,tag:pLzy+w6n3XgTRHM0vSij8Q==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
